--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-vue": "^0.12.4",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
-    "uuid": "^3.0.1",
     "vee-validate": "^2.0.0-beta.25",
     "vue": "^2.2.2",
-    "vue-router": "^2.3.0",
-    "vuejs-datepicker": "^0.7.3"
+    "vue-router": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
