--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^0.12.4",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
+    "pretty": "^2.0.0",
     "vee-validate": "^2.0.0-beta.25",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0"
