--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
     "pretty": "^2.0.0",
+    "urijs": "^1.18.10",
     "vee-validate": "^2.0.0-beta.25",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0"
